--- a/src/style.css
+++ b/src/style.css
@@ -63,7 +63,7 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
+  max-width: min(100vw, 1280px);
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
